fix gap

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -169,6 +169,7 @@ textarea{
 
 #related-videos{
 	margin-top: -85px;
+	padding-bottom: 0px !important;
 }
 #disqus_thread{
 	background-color: #fff;
